--- a/src/components/Expense/Expense.css
+++ b/src/components/Expense/Expense.css
@@ -10,3 +10,19 @@ h1,h2,h3,h4,h5,h6,p,a{
 .total-salary h2, h3, ul{
     margin-left: 5px;
 }
+.persion-image{
+    width: 75px;
+    height: 50px;
+    margin-top: 5px;
+}
+
+.btn-close {
+    box-sizing: content-box;
+    width: 1em;
+    height: 1em;
+    padding: .25em .25em;
+    color: #000;
+    border: 0;
+    border-radius: .25rem;
+    opacity: .5;
+}
